--- a/app/sass/common/_spacers.sass
+++ b/app/sass/common/_spacers.sass
@@ -1,3 +1,6 @@
+/* ==========================================================================
+	 Margins
+	 ========================================================================== */
 .mt-8
 	margin-top: 8px
 .mb-8
@@ -52,3 +55,62 @@
 	margin-bottom: 96px
 	+media-breakpoint-down(md)
 		margin-bottom: 64px
+
+
+/* ==========================================================================
+	 Paddings
+	 ========================================================================== */
+.pt-8
+	padding-top: 8px
+.pb-8
+	padding-bottom: 8px
+
+.pt-16
+	padding-top: 16px
+.pb-16
+	padding-bottom: 16px
+
+.pt-24
+	padding-top: 24px
+	+media-breakpoint-down(md)
+		padding-top: 16px
+.pb-24
+	padding-bottom: 24px
+	+media-breakpoint-down(md)
+		padding-bottom: 16px
+
+.pt-32
+	padding-top: 32px
+	+media-breakpoint-down(md)
+		padding-top: 24px
+.pb-32
+	padding-bottom: 32px
+	+media-breakpoint-down(md)
+		padding-bottom: 24px
+
+.pt-48
+	padding-top: 48px
+	+media-breakpoint-down(md)
+		padding-top: 32px
+.pb-48
+	padding-bottom: 48px
+	+media-breakpoint-down(md)
+		padding-bottom: 32px
+
+.pt-64
+	padding-top: 64px
+	+media-breakpoint-down(md)
+		padding-top: 48px
+.pb-64
+	padding-bottom: 64px
+	+media-breakpoint-down(md)
+		padding-bottom: 48px
+
+.pt-96
+	padding-top: 96px
+	+media-breakpoint-down(md)
+		padding-top: 64px
+.pb-96
+	padding-bottom: 96px
+	+media-breakpoint-down(md)
+		padding-bottom: 64px
