Delivery page. Instructions page. FAQ page. Code refactoring.

--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -63,6 +63,17 @@
 			background-color: lighten($text-200, 7%)
 		&:focus
 			background-color: $white
+	&.btn-secondary-green
+		border-color: $text-200
+		background-color: $white
+		color: $green
+		&:hover
+			background-color: $green
+			color: $white
+		&:focus
+			box-shadow: 0 0 0 4px rgba($green, 0.25)
+			background-color: $green
+			color: $white
 
 
 /* ==========================================================================
