--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -8,6 +8,8 @@
 	display: block
 	min-width: 0
 	height: 100%
+	.card-body
+		margin-top: 20px
 
 
 /* ==========================================================================
@@ -71,6 +73,8 @@
 				visibility: visible
 				opacity: 1
 				transform: none
+	.card-body
+		margin-top: 0
 
 	// Quick view
 	.card-quick-view
@@ -358,3 +362,34 @@
 		.date
 			display: block
 			color: $text-400
+
+
+/* ==========================================================================
+	 Instruction card
+	 ========================================================================== */
+.card-instruction
+	display: flex
+	flex-direction: column
+	.card-photo
+		padding: 16px 16px 0
+	.card-body
+		flex: 1 1 auto
+		display: flex
+		flex-direction: column
+	.card-meta
+		margin-bottom: 20px
+		.title
+			display: block
+			line-height: 20px
+			+media-breakpoint-down(sm)
+				+font-size(xxs)
+		.descr
+			margin-top: 8px
+			margin-bottom: 0
+			line-height: 20px
+			+media-breakpoint-down(sm)
+				+font-size(xxs)
+	.card-buttons
+		margin-top: auto
+		.btn
+			width: 100%
