--- a/app/sass/components/_tables.sass
+++ b/app/sass/components/_tables.sass
@@ -4,6 +4,25 @@
 table
 	width: 100%
 
+.table-border
+	thead
+		th
+			padding-bottom: 20px
+	tbody
+		td
+			padding-top: 24px
+			padding-right: 24px
+			padding-bottom: 24px
+			border-top: 1px solid $text-200
+
+.table-responsive
+	display: block
+	width: 100%
+	overflow-x: auto
+	-webkit-overflow-scrolling: touch
+	table
+		min-width: 500px
+
 
 /* ==========================================================================
 	 Product attributes table
