--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -31,6 +31,8 @@ body
 	+media-breakpoint-down(sm)
 		font-size: 13px
 		line-height: 20px
+	&.modal-open
+		padding-right: 0!important
 	&.lock-scroll
 		overflow: hidden
 		height: 100%
