About company page. Services -single/page. Code refactoring.

--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -33,6 +33,8 @@ body
 		line-height: 20px
 	&.modal-open
 		padding-right: 0!important
+	&.compensate-for-scrollbar
+		margin-right: 0
 	&.lock-scroll
 		overflow: hidden
 		height: 100%
