--- a/app/sass/common/_colors.sass
+++ b/app/sass/common/_colors.sass
@@ -8,6 +8,10 @@
 .text-gray-200
 	color: $text-200
 
+// Light colors
+.text-white
+	color: $white
+
 // Yellow colors
 .text-yellow
 	color: $yellow
