--- a/app/sass/pages/home.sass
+++ b/app/sass/pages/home.sass
@@ -21,6 +21,11 @@
 			height: 100%
 			img
 				object-position: left center
+		&-dots
+			position: absolute
+			left: 0
+			right: 0
+			bottom: 20px
 	&-product-slider
 		position: relative
 		overflow: hidden
@@ -57,7 +62,7 @@
 			+media-breakpoint-down(xs)
 				display: none
 		.swiper-pagination
-			bottom: 16px
+			bottom: 20px
 		.product
 			padding: 16px
 			text-align: center
