--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -393,3 +393,35 @@
 		margin-top: auto
 		.btn
 			width: 100%
+
+
+/* ==========================================================================
+	 Manager card
+	 ========================================================================== */
+.card-manager
+	display: flex
+	flex-direction: column
+	align-items: center
+	padding: 24px 16px
+	border-radius: 8px
+	background-color: $background
+	text-align: center
+	.card-photo
+		width: 112px
+		height: 112px
+		border-radius: 50%
+	.card-meta
+		margin-top: 12px
+		.name
+			display: block
+			color: $text-500
+			font-size: 15px
+			line-height: 20px
+			word-break: break-word
+			+media-breakpoint-down(sm)
+				+font-size(xxs)
+		.post
+			display: block
+			margin-top: 4px
+			color: $text-400
+			+font-size(xxs)
