Product single page (part 1 of 2). Other CSS fixes.

--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -119,7 +119,10 @@ hr
 	fill: currentColor
 
 .w-100
-	width: 100%
+	width: 100% !important
+
+.mw-100
+	max-width: 100% !important
 
 @media print
 	header.header,
