--- a/app/sass/components/_quantity.sass
+++ b/app/sass/components/_quantity.sass
@@ -28,6 +28,7 @@
 		padding-left: 8px
 		padding-right: 8px
 		border: 1px solid $text-200
+		background-color: $white
 		font-size: 15px
 		font-weight: $w-bold
 		line-height: 1
