--- a/app/sass/pages/testimonials.sass
+++ b/app/sass/pages/testimonials.sass
@@ -5,6 +5,8 @@
 		background-color: $background
 		+media-breakpoint-down(lg)
 			margin-top: 48px
+		+media-breakpoint-down(sm)
+			margin-top: 32px
 		+media-breakpoint-down(xs)
 			padding-left: 0
 			padding-right: 0
