--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -151,7 +151,7 @@
 /* ==========================================================================
 	 Add to cart button
 	 ========================================================================== */
-.btn-cart
+.btn-purchase
 	padding-left: 0
 	padding-right: 0
 	white-space: normal
