--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -246,6 +246,14 @@ label
 			line-height: 1.5
 			transition: all .1s ease-in-out
 
+	// Form group slider
+	&-group-slider
+		&-values
+			display: flex
+			justify-content: space-between
+			.from
+			.top
+
 
 /* ==========================================================================
 	 Search form
