--- a/app/sass/modules/_page.sass
+++ b/app/sass/modules/_page.sass
@@ -1,6 +1,7 @@
 @import '../helpers/helpers'
 
 main.page-main
+	overflow-x: hidden
 	padding-top: 24px
 	padding-bottom: 112px
 	+media-breakpoint-down(lg)
