--- a/app/sass/pages/shop-brands.sass
+++ b/app/sass/pages/shop-brands.sass
@@ -93,3 +93,9 @@
 					color: $warning
 					font-size: 13px
 					line-height: 1
+
+	// All products link
+	&-link
+		text-align: right
+		+media-breakpoint-down(md)
+			text-align: left
