--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -1,14 +1,14 @@
-+media-breakpoint-up(lg)
++media-breakpoint-up(xl)
 	.scrollbar
 		*
 			scrollbar-width: thin
-			scrollbar-color: rgba($black, 0.25) $white
+			scrollbar-color: $text-200 $white
 		::-webkit-scrollbar
-			width: 12px
+			width: 10px
 		::-webkit-scrollbar-track
 			background-color: $white
 		::-webkit-scrollbar-thumb
-			background-color: rgba($black, 0.25)
+			background-color: $text-200
 			border-radius: 20px
 			border: 3px solid $white
 			&:hover
@@ -39,6 +39,10 @@ body
 	&.lock-scroll
 		overflow: hidden
 		height: 100%
+		+media-breakpoint-up(xl)
+			padding-right: 17px
+			.header-middle.header--clone
+				padding-right: 17px
 
 *
 	box-sizing: border-box
