--- a/app/sass/components/_modals.sass
+++ b/app/sass/components/_modals.sass
@@ -22,19 +22,15 @@
 		margin-right: auto
 		padding-left: 8px
 		padding-right: 8px
-		.modal-header
-			+media-breakpoint-up(lg)
-				padding: 48px 32px
-				justify-content: center
-				.title
-					padding-right: 0
-				.btn-close
-					position: absolute
-					top: 16px
-					right: 16px
 
 	.modal-dialog-lg
 		max-width: 875px
+		+media-breakpoint-up(md)
+			.modal-header
+				padding: 40px 24px
+				justify-content: center
+				.title
+					text-align: center
 
 	.modal-content
 		border-radius: 16px
@@ -46,7 +42,11 @@
 		border-bottom: 0
 		.title
 			margin-bottom: 0
-			padding-right: 12px
+			padding-right: 20px
+		.btn-close
+			position: absolute
+			top: 18px
+			right: 18px
 
 	.modal-body
 		padding: 8px 24px 32px
