--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -593,6 +593,8 @@
 			.catalog-btn
 				width: 210px
 				font-size: 12px
+				font-weight: $w-bold
+				letter-spacing: 0.1em
 				text-transform: uppercase
 			// Catalog navigation
 			.catalog-nav
