--- a/app/sass/modules/_mmenu.sass
+++ b/app/sass/modules/_mmenu.sass
@@ -58,6 +58,10 @@
 			margin-bottom: 24px
 			.btn
 				width: 100%
+				font-size: 12px
+				font-weight: $w-bold
+				letter-spacing: 0.1em
+				text-transform: uppercase
 			.submenu
 				position: absolute
 				top: 0
