--- a/app/sass/components/_modals.sass
+++ b/app/sass/components/_modals.sass
@@ -59,6 +59,26 @@
 
 
 /* ==========================================================================
+	 Success modal
+	 ========================================================================== */
+.modal-success
+	.modal-body
+		text-align: center
+		.icon
+			width: 100px
+			height: 100px
+			color: $green
+			+media-breakpoint-down(lg)
+				width: 75px
+				height: 75px
+		.title
+			margin-top: 12px
+			margin-bottom: 10px
+		.descr
+			margin-bottom: 0
+
+
+/* ==========================================================================
 	 Buy in one lick
 	 ========================================================================== */
 .modal-quick-buy
