--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -34,6 +34,7 @@
 
 	// Base customize
 	.filter
+		position: relative
 		&-item
 			&:not(:last-child)
 				margin-bottom: 24px
@@ -335,4 +336,8 @@
 			text-align: center
 
 
-
+/* ==========================================================================
+	 Shop Categories
+	 ========================================================================== */
+.shop-products
+	position: relative
