Changed class for success/error modals. Added error icon for notice modal. CSS fixes.

--- a/app/sass/components/_modals.sass
+++ b/app/sass/components/_modals.sass
@@ -61,18 +61,17 @@
 /* ==========================================================================
 	 Success modal
 	 ========================================================================== */
-.modal-success
+.modal-notice
 	.modal-body
 		text-align: center
 		.icon
 			width: 100px
 			height: 100px
-			color: $green
 			+media-breakpoint-down(lg)
 				width: 75px
 				height: 75px
 		.title
-			margin-top: 12px
+			margin-top: 16px
 			margin-bottom: 10px
 		.descr
 			margin-bottom: 0
