--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -34,7 +34,7 @@
 		color: inherit
 	&:focus
 		box-shadow: 0 0 0 4px rgba($text-300, 0.25)
-	&:disabled
+	&:disabled:not(.fancybox-button)
 		background-color: $text-200 !important
 		color: $text-300 !important
 
