--- a/app/sass/pages/_shop-product.sass
+++ b/app/sass/pages/_shop-product.sass
@@ -74,6 +74,7 @@
 					max-height: 300px
 				.photo
 					user-select: none
+					outline: none
 					&::before
 						content: ''
 						position: absolute
