--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -779,4 +779,25 @@
 											display: inline-block
 											padding: 4px 0
 											+font-size(xxs)
-
+						.megamenu-brands
+							.megamenu-item
+								flex-basis: 16.66667%
+								max-width: 16.66667%
+								&:hover
+									.image
+										border-color: $blue
+								.image
+									width: 100%
+									height: 64px
+									padding: 8px
+									border-radius: 4px
+									border: 1px solid $text-200
+									text-align: center
+									transition: border .3s ease
+									img
+										max-width: 104px
+										max-height: 48px
+								.title
+									font-size: 15px
+									font-weight: $w-bold
+									line-height: 16px
