Added reset button for shop filters. Fancybox for product complectation.

--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -95,6 +95,14 @@
 		&-from
 			margin-right: 8px
 
+	// Filter triggers (reset button)
+	.filter-triggers
+		display: none
+		&._is-shown
+			display: block
+		.filter-reset
+			width: 100%
+
 
 /* ==========================================================================
 	 Shop Settings (Sorting, products display etc.)
