--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -760,18 +760,26 @@
 								flex: 0 0 16.66667%
 								max-width: 16.66667%
 								padding: 20px 12px
-								.image
-									display: block
-									width: 88px
-									height: 88px
-									margin-bottom: 16px
-									border-radius: 38px
 								.category
-									display: inline-block
-									padding-right: 10px
-									font-size: 15px
-									font-weight: $w-bold
-									line-height: 16px
+									&:hover
+										.category-image img
+											transform: scale(1.15)
+									&-image
+										display: block
+										width: 88px
+										height: 88px
+										border-radius: 38px
+										img
+											will-change: transform
+											transform: scale(1.01)
+											transition: transform .3s ease
+									&-name
+										display: block
+										padding-top: 16px
+										padding-right: 10px
+										font-size: 15px
+										font-weight: $w-bold
+										line-height: 16px
 								.subcategories
 									margin-top: 10px
 									> li
@@ -789,6 +797,7 @@
 								.image
 									width: 100%
 									height: 64px
+									margin-bottom: 16px
 									padding: 8px
 									border-radius: 4px
 									border: 1px solid $text-200
